Fix description and remove comments
