# design/resource.go
@@ -5,7 +5,7 @@ import (
 )
 
 var _ = Service("resource", func() {
-	Description("The resource service provides all resources")
+	Description("The resource service provides all resources information")
 
 	Error("internal-error", ErrorResult)
 
@@ -15,7 +15,7 @@ var _ = Service("resource", func() {
 		Result(ArrayOf(Resource))
 
 		HTTP(func() {
-			GET("/resource")
+			GET("/resources")
 			Response(StatusOK)
 			Response("internal-error", StatusInternalServerError)
 		})
