# gen/http/openapi.yaml
@@ -13,7 +13,7 @@ produces:
 - application/xml
 - application/gob
 paths:
-  /resource:
+  /resources:
     get:
       tags:
       - resource
@@ -132,7 +132,7 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/TagResponse'
-        description: Tags associated with the category
+        description: Tags related to resources
         example:
         - id: 1
           name: notification
@@ -161,6 +161,13 @@ definitions:
     required:
     - id
     - name
+    - catalog
+    - type
+    - description
+    - latest_version
+    - rating
+    - last_updated_at
+    - tags
   TagResponse:
     title: TagResponse
     type: object
