# gen/http/resource/server/paths.go
@@ -9,5 +9,5 @@ package server
 
 // AllResourcePath returns the URL path to the resource service All HTTP endpoint.
 func AllResourcePath() string {
-	return "/resource"
+	return "/resources"
 }
